Add stubsfor library methods, but KeY cannot find them yet